Major refactor. Show user roles on login.